--- a/package.json
+++ b/package.json
@@ -9,14 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.6.10",
+    "@emotion/react": "^11.5.0",
+    "@emotion/styled": "^11.3.0",
+    "@heroicons/react": "^1.0.5",
+    "@tailwindcss/line-clamp": "^0.2.2",
+    "date-fns": "^2.25.0",
+    "framer-motion": "^4.1.17",
     "next": "11.1.2",
+    "rc-slider": "^9.7.4",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "tailwind-scrollbar-hide": "^1.0.3"
   },
   "devDependencies": {
     "@types/react": "17.0.31",
+    "autoprefixer": "^10.3.7",
     "eslint": "8.1.0",
     "eslint-config-next": "11.1.2",
+    "postcss": "^8.3.11",
+    "tailwindcss": "^2.2.17",
     "typescript": "4.4.4"
   }
 }
